--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "chart.js": "^2.7.1",
     "vue": "^2.5.2",
     "vue-chartjs": "^3.2.1",
     "vue-router": "^3.0.1"
