--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "chart.js": "^2.7.1",
+    "cypress": "^2.0.2",
     "vue": "^2.5.2",
     "vue-chartjs": "^3.2.1",
     "vue-router": "^3.0.1"
